refactor: update conclusion and use  better image for comparison

--- a/ocr_model_comparison.ipynb
+++ b/ocr_model_comparison.ipynb
@@ -375,6 +375,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Installation \n",
+    "#### - EasyOCR is easier than tesseract in instalation as it require install model independently and then install related dependencies in python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Resoures comsuption\n",
+    "#### I calculate average resources consuption for different 8 image for each model. \n",
+    "#### Following table describe that"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
